feat(router): 添加自动路由和布局功能

--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.7.4",
     "typescript": "~5.9.3",
+    "unplugin-vue-router": "^0.19.2",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^4.0.16",
     "vue-tsc": "^3.2.2"
   }
