--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "npm-run-all2": "^8.0.4",
     "prettier": "3.7.4",
     "typescript": "~5.9.3",
+    "unplugin-auto-import": "^21.0.0",
     "unplugin-vue-router": "^0.19.2",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
