--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "3.7.4",
     "typescript": "~5.9.3",
     "unplugin-auto-import": "^21.0.0",
+    "unplugin-vue-components": "^31.0.0",
     "unplugin-vue-router": "^0.19.2",
     "vite": "^7.3.0",
     "vite-plugin-vue-devtools": "^8.0.5",
