feat: 添加scss样式系统支持并配置stylelint

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write --experimental-cli src/"
+    "format": "prettier --write --experimental-cli src/",
+    "lint:stylelint": "stylelint  \"**/*.{css,scss,less,vue,html}\" --fix"
   },
   "dependencies": {
     "@vueuse/core": "^14.2.0",
