build: 添加 pnpm 版本要求至引擎配置

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "^20.19.0 || >=22.12.0"
+    "node": "^20.19.0 || >=22.12.0",
+    "pnpm": ">=10"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
