--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsdom": "^27.4.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.7.4",
+    "sass": "^1.97.3",
     "typescript": "~5.9.3",
     "unocss": "^66.6.0",
     "unplugin-auto-import": "^21.0.0",
