--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tsconfig/node24": "^24.0.3",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^24.10.4",
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "@vitest/eslint-plugin": "^1.6.5",
@@ -47,11 +48,15 @@
     "jsdom": "^27.4.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.7.4",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "terser": "^5.46.0",
     "typescript": "~5.9.3",
     "unplugin-auto-import": "^21.0.0",
     "unplugin-vue-components": "^31.0.0",
     "unplugin-vue-router": "^0.19.2",
     "vite": "^7.3.0",
+    "vite-plugin-compression2": "^2.4.0",
+    "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^4.0.16",
