--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
-VITE_APP_NAME=demo_default
-VITE_NUMBER_DEMO=3000
-VITE_BOOLEAN_DEMO=true
+# 通用环境变量
+
+# 项目名称
+VITE_APP_TITLE = 'base-vue3-template'
+# 版本号
+VITE_VERSION = 1.0.0
+# 端口号
+# VITE_PORT = 3000
+
+# 网站地址前缀
+VITE_BASE_URL = /
+# API 地址前缀
+VITE_API_URL = http://localhost:8080
