--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "unplugin-vue-components": "^31.0.0",
     "unplugin-vue-router": "^0.19.2",
     "vite": "^7.3.0",
+    "vite-plugin-checker": "^0.12.0",
     "vite-plugin-compression2": "^2.4.0",
     "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-vue-devtools": "^8.0.5",
